# lambda-router

./: .pre-commit-config.yaml  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
docs/: conf.py  index.rst
docs/examples/: appsync-payload.py  sqs-payload.py
src/lambda_router/: __init__.py  app.py  appsync.py  config.py  interfaces.py  routers.py
tests/: test_app.py  test_appsync.py  test_config.py  test_routers.py
tests/examples/: sqs-payload.py
