[flake8]
max-line-length=120
exclude = docs/*.py,*/migrations/*.py,*/manage.py,ve

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[isort]
atomic=true
force_grid_wrap=0
include_trailing_comma=true
lines_after_imports=2
lines_between_types=1
multi_line_output=3
not_skip=__init__.py
skip=LICENSE,setup.cfg,.gitignore
use_parentheses=true

known_first_party=lambda_router
known_third_party=attr,pytest,setuptools
